--- a/src/pages/WordG/WordG.css
+++ b/src/pages/WordG/WordG.css
@@ -27,12 +27,11 @@
   }
 
   p {
-    text-align: center;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
     border: 2px solid black;
     padding: 5px;
-    background-color:rgb(5, 5, 42);
+    background-color: transparent;
     box-shadow: 1px 1px 20px 7px;
   }
   
